Updated job scheduler endpoints
