# kcrud-server/src/main/resources/openapi/documentation.yaml
@@ -100,14 +100,6 @@ paths:
                   value: "All employees deleted."
     get:
       description: "Return demo records interactive HTML."
-      parameters:
-        - name: "sort"
-          in: "query"
-          required: false
-          schema:
-            type: "array"
-            items:
-              type: "string"
       responses:
         "200":
           description: "OK"
@@ -287,9 +279,21 @@ paths:
                 Example#1:
                   description: ""
                   value: "/rbac/login"
-  /scheduler:
+  /scheduler/jobs:
+    delete:
+      description: "Delete all scheduled notifications."
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: ""
     get:
-      description: ""
+      description: "Route to display all scheduled jobs."
       responses:
         "200":
           description: "OK"
@@ -297,6 +301,39 @@ paths:
             application/json:
               schema:
                 type: "string"
+  /scheduler/jobs/{name}/{group}:
+    delete:
+      description: "Delete a concrete scheduled notifications."
+      parameters:
+        - name: "name"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
+        - name: "group"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
+      responses:
+        "200":
+          description: "OK"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: ""
+        "404":
+          description: "Not Found"
+          content:
+            '*/*':
+              schema:
+                type: "string"
+              examples:
+                Example#1:
+                  value: ""
   /snowflake/{id}:
     get:
       description: "Snowflake parser to read back the components of a snowflake ID."
@@ -326,8 +363,6 @@ paths:
   /v1/employees/{employee_id}:
     delete:
       description: "Delete an employee by ID."
-      security:
-        - BearerAuth: [ ]
       parameters:
         - name: "employee_id"
           in: "path"
@@ -350,8 +385,6 @@ paths:
                 format: "int32"
     get:
       description: "Find an employee by ID."
-      security:
-        - BearerAuth: [ ]
       parameters:
         - name: "employee_id"
           in: "path"
@@ -373,8 +406,6 @@ paths:
                 $ref: "#/components/schemas/EmployeeEntity"
     put:
       description: "Update an employee by ID."
-      security:
-        - BearerAuth: [ ]
       parameters:
         - name: "employee_id"
           in: "path"
@@ -397,8 +428,6 @@ paths:
   /v1/employees/{employee_id}/employments:
     delete:
       description: "Delete all employments for an employee ID."
-      security:
-        - BearerAuth: [ ]
       parameters:
         - name: "employee_id"
           in: "path"
@@ -421,8 +450,6 @@ paths:
                 format: "int32"
     get:
       description: "Find all employments for an employee ID."
-      security:
-        - BearerAuth: [ ]
       parameters:
         - name: "employee_id"
           in: "path"
@@ -446,8 +473,6 @@ paths:
                   $ref: "#/components/schemas/EmploymentEntity"
     post:
       description: "Create a new employment."
-      security:
-        - BearerAuth: [ ]
       parameters:
         - name: "employee_id"
           in: "path"
@@ -470,8 +495,6 @@ paths:
   /v1/employees/{employee_id}/employments/{employment_id}:
     delete:
       description: "Delete an employment by ID."
-      security:
-        - BearerAuth: [ ]
       parameters:
         - name: "employment_id"
           in: "path"
@@ -499,8 +522,6 @@ paths:
                 format: "int32"
     get:
       description: "Find an employment by ID."
-      security:
-        - BearerAuth: [ ]
       parameters:
         - name: "employee_id"
           in: "path"
@@ -527,8 +548,6 @@ paths:
                 $ref: "#/components/schemas/EmploymentEntity"
     put:
       description: "Update an employment by ID."
-      security:
-        - BearerAuth: [ ]
       parameters:
         - name: "employee_id"
           in: "path"
@@ -1085,11 +1104,3 @@ components:
         - "workModality"
         - "employee"
         - "meta"
-  securitySchemes:
-    BearerAuth: # JWT authentication scheme (Can be any name)
-      type: http
-      scheme: bearer
-      bearerFormat: JWT
-    BasicAuth: # Basic authentication scheme (Can be any name)
-      type: http
-      scheme: basic
